--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^1.14.0",
     "zustand": "^4.3.9"
   },
